k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cicd-app
spec:
  type: LoadBalancer
  selector:
    app: cicd-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
